--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
 body {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body h1 {
@@ -16,4 +19,12 @@ body button {
   box-shadow: 0;
   border-radius: 5px;
   margin-bottom: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+#game-board {
+  background-color: red;
 }
